style(content): #396 Fix spacing, colors, fonts

--- a/content-src/components/Spotlight/Spotlight.scss
+++ b/content-src/components/Spotlight/Spotlight.scss
@@ -22,6 +22,10 @@
   height: $spotlight-item-height;
   position: relative;
 
+  .inner-border {
+    border-color: $faintest-black;
+  }
+
   > a {
     display: block;
     color: inherit;
@@ -49,10 +53,9 @@
   }
 
   .spotlight-title {
-    margin: 0 0 5px;
-    max-height: $spotlight-title-max-height;
-    overflow: hidden;
+    margin: 0 0 $spotlight-title-margin-bottom;
     font-size: inherit;
+    line-height: inherit;
   }
 
   &:hover .spotlight-title {
@@ -61,14 +64,16 @@
 
   .spotlight-info {
     padding: $spotlight-padding;
-    height: $spotlight-info-height;
+  }
+
+  .spotlight-text {
+    max-height: $spotlight-text-height;
+    overflow: hidden;
   }
 
   .spotlight-description {
-    font-size: 14px;
-    height: $spotlight-description-height;
-    margin: 10px 0;
-    overflow: hidden;
+    font-size: $spotlight-font-size;
+    margin: 0;
   }
 
   .spotlight-context {
@@ -83,7 +88,7 @@
   }
 
   &.spotlight-placeholder {
-    background: none;
+    background: $placeholder-background;
     border: $placeholder-border;
     box-shadow: none;
     height: $spotlight-item-height;
