--- a/content-src/styles/variables.scss
+++ b/content-src/styles/variables.scss
@@ -17,30 +17,36 @@ $border-radius: 3px;
 $pink: #E6196F;
 $green: #4EB748;
 
-$base-gutter: 20px;
+$wrapper-max-width: 696px;
 
-$section-margin: 30px;
+$base-gutter: 24px;
+$section-margin: 41px;
+
+$section-title-font-size: 12px;
+$section-title-color: $light-grey;
+$section-title-bottom-margin: 13px;
 
 $header-box-shadow: 0 4px 2px -3px rgba(0, 0, 0, 0.05);
 $header-nav-width: 250px;
 $header-border: solid 1px #DFE0E1;
 
+$tile-gutter: $base-gutter;
 $tile-width: 96px;
 $tile-height: $tile-width;
 $tile-title-height: 22px;
 $tile-font-size: 13px;
 $tile-border: 1px #FFF;
-$tile-gutter: $base-gutter;
 $tile-title-bg-color: rgba(255, 255, 255, 0.6);
 $tile-title-hover-color: #FFF;
 $tile-title-font-size: 11px;
 $tile-close-border: 1px solid rgba(0, 0, 0, 0.2);
 $tile-close-boxshadow: 0 2px 0 rgba(0, 0, 0, 0.1);
 
-$wrapper-max-width: 6 * $tile-width + 5 * $tile-gutter;
-
-$feed-gutter-h: 12px;
-$feed-gutter-v: 12px;
+$feed-font-size: 12px;
+$feed-date-font-color: #BFBFBF;
+$feed-date-lighter-font-color: lighten($feed-date-font-color, 10%);
+$feed-gutter-h: 14px;
+$feed-gutter-v: 11px;
 $feed-circle-size: 8px;
 $feed-circle-offset: 16px;
 $feed-icon-size: 40px;
@@ -48,28 +54,37 @@ $feed-hover-color: rgba(0, 0, 0, 0.06);
 $feed-line-color: rgba(0, 0, 0, 0.05);
 $feed-circle-color: #CECECE;
 
-$spotlight-padding: 10px;
-$spotlight-item-height: 250px;
+$spotlight-padding: $base-gutter / 2;
+$spotlight-item-height: 262px;
 $spotlight-item-width: 226px;
-$spotlight-img-height: 124px;
-$spotlight-info-height: 158px;
-
+$spotlight-img-height: 130px;
+$spotlight-text-height: 86px;
+$spotlight-font-size: 13px;
 $spotlight-icon-height: 35px;
 $spotlight-icon-width: 35px;
-$spotlight-icon-gutter: 10px;
+$spotlight-icon-gutter: $base-gutter / 2;
 $spotlight-description-height: 34px;
 $spotlight-title-max-height: 36px;
+$spotlight-title-margin-bottom: 2px;
 
 $timeline-max-width: 3 * $spotlight-item-width + 20px * 2;
 
 $site-icon-border-radius: 3px;
 
+$search-border-radius: 4px;
+$search-margin-top: 52px;
+$search-margin-bottom: 62px;
+$search-height: 36px;
 $search-input-left-label-width: 35px;
+$search-input-border-color: #BFBFBF;
 $search-blue: #0996F8;
 $search-shadow: rgba(96, 181, 255, 0.75);
 $search-button-grey: #FBFBFB;
+$search-button-border-color: #D4D4D4;
+$search-button-width: 64px;
 
-$placeholder-border: 2px dashed #C1C1C1;
+$placeholder-background: transparent;
+$placeholder-border: 1px solid $faintest-black;
 
 $item-shadow: 0 1px 0 0 $faintest-black;
 $item-shadow-hover: 0 1px 0 0 $faintest-black, 0 0 0 5px $faintest-black;
